--- a/v1/src/main/resources/application.properties
+++ b/v1/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=v1
+server.port=8085
+
+#conf bd 
+spring.datasource.url=jdbc:mysql://localhost:3306/bdroller
+spring.datasource.username=user_test_bdroller
+spring.datasource.password=root1234
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
