--- a/v1/src/main/resources/application.properties
+++ b/v1/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8085
 
 #conf bd 
 spring.datasource.url=jdbc:mysql://localhost:3306/bdroller
-spring.datasource.username=user_test_bdroller
-spring.datasource.password=root1234
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=usertestbdroller
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.jpa.properties.hibernate.format_sql=true
